# shieldpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
haskell/: README.md  haskell.cabal  package.yaml
haskell/src/: Lib.hs
src/scripts/: cartpole_poc.py
src/shieldpy/: __init__.py  compiler.py  nfa.py  rl-loop.py  watertank.py
src/shieldpy/automata/: dynamic_nondeterministic_finite.py  game.py  nondeterministic_finite.py  product.py  types.py  util.py  visualize.py
src/shieldpy/environments/: watertank.py
src/shieldpy/environments/gymnasium/: acrobot.py  interface.py
src/shieldpy/logic/: syntax.py
src/shieldpy/smt/: __init__.py  encoding.py
test/: conftest.py  test_compiler.py  test_dyn_nfa_gymwrapper.py  test_encoding.py  test_game.py  test_ltl.py  test_nfa.py  test_shield_e2e.py  test_watertank.py  watertank.py
