[project]
name = "shieldpy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Quinn Dougherty", email = "quinnd@riseup.net" }
]
dependencies = [
    "z3-solver>=4.13.0.0",
    "gymnasium>=0.28",
    "ray[rllib]>=2.35.0",
    "torch>=2.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
cartpole = "scripts.cartpole_poc:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "hypothesis>=6.111.1",
    "black>=24.8.0",
    "pyright>=1.1.377",
]
[tool.pyright]
include = ["src"]
venvPath = "./.venv"
venv = "./.venv"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shieldpy", "src/scripts"]
